feat: status of wireguarad
